feat: mobile adaptation

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 	<meta property="og:image" content="https://avatars.githubusercontent.com/u/65571116?v=4">
 	<link rel="icon" type="image/ico" href="media/icon.ico">
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>m0ln1z</title>
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
 	<div class="background-video">
-		<video autoplay loop muted>
+		<video autoplay loop muted playsinline preload="metadata" disablepictureinpicture controlslist="nodownload nofullscreen noremoteplayback">
 		</video>
 	</div>
 	<div class="container">
