feat: mobile adaptation

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ru">
 
 <head>
-	<meta property="og:title" content="Zenettany">
-	<meta property="og:description" content="My name is yasno :0">
+	<meta property="og:title" content="Artur card">
+	<meta property="og:description" content="My name is Artur :0">
 	<meta property="og:image" content="https://avatars.githubusercontent.com/u/65571116?v=4">
 	<link rel="icon" type="image/ico" href="media/icon.ico">
 	<meta charset="UTF-8">
