--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					<p class="nometa">Write directly to the point. 📝</p>
 					<p class="email">My email: <a href="mailto:anartur476@gmail.com"
 							class="email2">anartur476@gmail.com</a> 📩</p>
-					<video autoplay loop muted class="ayanami">
+					<video autoplay loop muted class="ayanami" playsinline preload="metadata" disablepictureinpicture controlslist="nodownload nofullscreen noremoteplayback">
 						<source src="media/ayanami.mp4" type="video/mp4">
 					</video>
 				</div>
