--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta property="og:title" content="Artur card">
 	<meta property="og:description" content="My name is Artur :0">
-	<meta property="og:image" content="https://avatars.githubusercontent.com/u/65571116?v=4">
+	<meta property="og:image" content="https://avatars.githubusercontent.com/u/159512582?s=400&u=272196317c6f7896609edf61eae7c6d01c2214eb&v=4">
 	<link rel="icon" type="image/ico" href="media/icon.ico">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
